--- a/playground.ipynb
+++ b/playground.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 173,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 175,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 176,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 177,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 178,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 179,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,25 +72,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 180,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Susanne Lucas',\n",
-       " 'Caroline Dijoux',\n",
-       " 'Valentine Schmitt',\n",
-       " 'Théodore Lévêque-Barbier',\n",
-       " 'Auguste Charles',\n",
-       " 'Thierry Tanguy-Bodin',\n",
-       " 'Julie Samson-Brunet',\n",
-       " 'Daniel du Evrard',\n",
-       " 'Tristan Meyer-Meunier',\n",
-       " 'Anne-Josette Vaillant']"
+       "['Denis Lucas',\n",
+       " 'Manon Dumas',\n",
+       " 'Théophile-Grégoire Maurice',\n",
+       " 'Suzanne-Cécile Dubois',\n",
+       " 'Jérôme Blondel',\n",
+       " 'Henri Diaz',\n",
+       " 'Josette Menard',\n",
+       " 'Matthieu Alves de De Sousa',\n",
+       " 'Corinne-Élisabeth Jourdan',\n",
+       " 'Adélaïde Michaud']"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 180,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 181,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 182,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 183,
    "metadata": {},
    "outputs": [
     {
@@ -151,73 +151,85 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Susanne Lucas</td>\n",
-       "      <td>12, boulevard Lemonnier\\n17442 Sainte Matthieu...</td>\n",
+       "      <td>Denis Lucas</td>\n",
+       "      <td>4, boulevard Huet\\n18135 Germain</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Caroline Dijoux</td>\n",
-       "      <td>76, rue Marcel Guillet\\n90269 Schneider-la-Forêt</td>\n",
+       "      <td>Manon Dumas</td>\n",
+       "      <td>27, rue Perez\\n78870 Carlier-sur-Giraud</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Valentine Schmitt</td>\n",
-       "      <td>5, chemin Pauline Fabre\\n83650 Bonnin-sur-Leleu</td>\n",
+       "      <td>Théophile-Grégoire Maurice</td>\n",
+       "      <td>458, chemin de Perrot\\n76223 Rémy-sur-Rossi</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Théodore Lévêque-Barbier</td>\n",
-       "      <td>134, chemin Lenoir\\n84614 Traorenec</td>\n",
+       "      <td>Suzanne-Cécile Dubois</td>\n",
+       "      <td>61, rue Aubry\\n95734 Hernandezdan</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Auguste Charles</td>\n",
-       "      <td>66, avenue Michèle Perret\\n80273 Mahe</td>\n",
+       "      <td>Jérôme Blondel</td>\n",
+       "      <td>53, boulevard de Perret\\n17555 Saint Aurore</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>Thierry Tanguy-Bodin</td>\n",
-       "      <td>42, rue Fouquet\\n25512 Pires</td>\n",
+       "      <td>Henri Diaz</td>\n",
+       "      <td>9, boulevard de Morel\\n15624 Sainte Alice</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>Julie Samson-Brunet</td>\n",
-       "      <td>58, avenue Henri Delattre\\n86760 Chevalier</td>\n",
+       "      <td>Josette Menard</td>\n",
+       "      <td>71, chemin Martin Boulay\\n12209 Lenoirdan</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>Daniel du Evrard</td>\n",
-       "      <td>12, boulevard de Rousseau\\n48663 Saint RémyBourg</td>\n",
+       "      <td>Matthieu Alves de De Sousa</td>\n",
+       "      <td>75, avenue Jacob\\n07960 Pottier</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>Tristan Meyer-Meunier</td>\n",
-       "      <td>51, rue Tanguy\\n01912 Noël</td>\n",
+       "      <td>Corinne-Élisabeth Jourdan</td>\n",
+       "      <td>624, rue de Chauveau\\n72563 Bouvetboeuf</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>Anne-Josette Vaillant</td>\n",
-       "      <td>avenue Navarro\\n46051 VerdierVille</td>\n",
+       "      <td>Adélaïde Michaud</td>\n",
+       "      <td>54, avenue Laurent Berthelot\\n40749 Sainte Lucie</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                        nom                                            adresse\n",
-       "0             Susanne Lucas  12, boulevard Lemonnier\\n17442 Sainte Matthieu...\n",
-       "1           Caroline Dijoux   76, rue Marcel Guillet\\n90269 Schneider-la-Forêt\n",
-       "2         Valentine Schmitt    5, chemin Pauline Fabre\\n83650 Bonnin-sur-Leleu\n",
-       "3  Théodore Lévêque-Barbier                134, chemin Lenoir\\n84614 Traorenec\n",
-       "4           Auguste Charles              66, avenue Michèle Perret\\n80273 Mahe\n",
-       "5      Thierry Tanguy-Bodin                       42, rue Fouquet\\n25512 Pires\n",
-       "6       Julie Samson-Brunet         58, avenue Henri Delattre\\n86760 Chevalier\n",
-       "7          Daniel du Evrard   12, boulevard de Rousseau\\n48663 Saint RémyBourg\n",
-       "8     Tristan Meyer-Meunier                         51, rue Tanguy\\n01912 Noël\n",
-       "9     Anne-Josette Vaillant                 avenue Navarro\\n46051 VerdierVille"
+       "                          nom  \\\n",
+       "0                 Denis Lucas   \n",
+       "1                 Manon Dumas   \n",
+       "2  Théophile-Grégoire Maurice   \n",
+       "3       Suzanne-Cécile Dubois   \n",
+       "4              Jérôme Blondel   \n",
+       "5                  Henri Diaz   \n",
+       "6              Josette Menard   \n",
+       "7  Matthieu Alves de De Sousa   \n",
+       "8   Corinne-Élisabeth Jourdan   \n",
+       "9            Adélaïde Michaud   \n",
+       "\n",
+       "                                            adresse  \n",
+       "0                  4, boulevard Huet\\n18135 Germain  \n",
+       "1           27, rue Perez\\n78870 Carlier-sur-Giraud  \n",
+       "2       458, chemin de Perrot\\n76223 Rémy-sur-Rossi  \n",
+       "3                 61, rue Aubry\\n95734 Hernandezdan  \n",
+       "4       53, boulevard de Perret\\n17555 Saint Aurore  \n",
+       "5         9, boulevard de Morel\\n15624 Sainte Alice  \n",
+       "6         71, chemin Martin Boulay\\n12209 Lenoirdan  \n",
+       "7                   75, avenue Jacob\\n07960 Pottier  \n",
+       "8           624, rue de Chauveau\\n72563 Bouvetboeuf  \n",
+       "9  54, avenue Laurent Berthelot\\n40749 Sainte Lucie  "
       ]
      },
-     "execution_count": 103,
+     "execution_count": 183,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -228,32 +240,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 184,
    "metadata": {},
    "outputs": [],
    "source": [
-    "aze = df.to_sql('products', if_exists='replace',con = engine, index = False)"
+    "aze = df.to_sql('products', conn, if_exists='replace', index = False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 185,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('Suzanne Fleury', '912, rue Eugène Collin\\n17666 Sainte Maurice')\n",
-      "('Philippine Pineau', '63, boulevard de Bonnin\\n51051 Guillaume')\n",
-      "('Marc Martinez', '29, rue de Buisson\\n22618 Étienne')\n",
-      "('Geneviève Bousquet', '57, rue de Masson\\n11070 Robert-sur-Gaudin')\n",
-      "('Timothée Lefèvre', 'boulevard de Roger\\n89142 Saint Michèle')\n",
-      "('Emmanuelle Renard', 'avenue Gilbert Leblanc\\n57765 Saint Simonenec')\n",
-      "('Théophile de la Joseph', '311, boulevard Besnard\\n25231 Sainte Jacques')\n",
-      "('Nathalie Samson-Monnier', '40, boulevard de Lopez\\n93117 Chevallier')\n",
-      "('Colette Martins', '76, rue Lamy\\n27966 Rey')\n",
-      "('Margaux Petitjean-Da Silva', 'avenue de Lejeune\\n51449 Lévêquedan')\n"
+      "('Denis Lucas', '4, boulevard Huet\\n18135 Germain')\n",
+      "('Manon Dumas', '27, rue Perez\\n78870 Carlier-sur-Giraud')\n",
+      "('Théophile-Grégoire Maurice', '458, chemin de Perrot\\n76223 Rémy-sur-Rossi')\n",
+      "('Suzanne-Cécile Dubois', '61, rue Aubry\\n95734 Hernandezdan')\n",
+      "('Jérôme Blondel', '53, boulevard de Perret\\n17555 Saint Aurore')\n",
+      "('Henri Diaz', '9, boulevard de Morel\\n15624 Sainte Alice')\n",
+      "('Josette Menard', '71, chemin Martin Boulay\\n12209 Lenoirdan')\n",
+      "('Matthieu Alves de De Sousa', '75, avenue Jacob\\n07960 Pottier')\n",
+      "('Corinne-Élisabeth Jourdan', '624, rue de Chauveau\\n72563 Bouvetboeuf')\n",
+      "('Adélaïde Michaud', '54, avenue Laurent Berthelot\\n40749 Sainte Lucie')\n"
      ]
     }
    ],
