--- a/playground.ipynb
+++ b/playground.ipynb
@@ -8479,7 +8479,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.4 ('briefsql')",
+   "display_name": "Python 3.10.8 ('sql')",
    "language": "python",
    "name": "python3"
   },
@@ -8493,12 +8493,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.8"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "66062081e44bb5277d8e414a13dfe298be444124435603c2e8a4ad0125e17b7a"
+    "hash": "b1c06e4ae51d314a790b36a63c3374957c5954d4fa0164837fbd9624fe7909e7"
    }
   }
  },
