--- a/pp.ipynb
+++ b/pp.ipynb
@@ -15,20 +15,39 @@
     }
    ],
    "source": [
+    "from sqlalchemy import MetaData,create_engine,select\n",
+    "from faker import Faker\n",
+    "from faker_food import FoodProvider\n",
+    "from random import randint,uniform,choice\n",
+    "from random import randrange\n",
+    "from datetime import timedelta\n",
     "from datetime import datetime\n",
-    "from dateutil.relativedelta import relativedelta\n",
-    "current_date = datetime.today()\n",
-    "print('Current Date: ', current_date)\n",
-    "# Subtract 20 months from current date\n",
-    "n = 20\n",
-    "past_date = current_date - relativedelta(months=n)\n",
-    "print(past_date)"
+    "from dateutil.relativedelta import relativedelta\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "engine = create_engine('sqlite:///restaurant.db')\n",
+    "metadata = MetaData()\n",
+    "with engine.connect() as conn: #connection avec notre base de données existantes\n",
+    "    metadata.reflect(conn)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.4 ('briefsql')",
+   "display_name": "Python 3.10.8 ('sql')",
    "language": "python",
    "name": "python3"
   },
@@ -42,12 +61,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.8"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "66062081e44bb5277d8e414a13dfe298be444124435603c2e8a4ad0125e17b7a"
+    "hash": "b1c06e4ae51d314a790b36a63c3374957c5954d4fa0164837fbd9624fe7909e7"
    }
   }
  },
